StudentController Unit- und Integrationtests hinzugefügt + refactorings, kleine Fixes